@@ -21,3 +21,4 @@
 0.21   2020-01-10: added volume set "fast" (7 vols)
 A0.1   2020-01-21: dwd12admin: concept
 A0.2   2020-02-21: dwd12admin: -d to set destination (global, local or user)
+A0.3   2020-02-21: dwd12admin: -n to set destination name
